# busan-sw-maestro-project

./: README.md
projects/team20-enderdragon/project_code/: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.bat  start.sh
projects/team20-enderdragon/project_code/alembic/: env.py
projects/team20-enderdragon/project_code/app/: api.py  graph.py  main.py  models.py  repositories.py  schemas.py  vector_store.py
projects/team20-enderdragon/project_code/frontend/: ui.py
projects/team20-enderdragon/project_code/scripts/: ingest_wiki.py  migrate_local_to_cloud.py
projects/team20-enderdragon/project_code/tests/: test_clarifier.py  test_facts.py  test_prompt_injection.py  test_stream_error.py
projects/team30-taskpilot/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT-MAP.md  DESIGN.md  Dockerfile.api  Dockerfile.frontend  README.md  docker-compose.yml  pyproject.toml  railway.toml  start.sh
projects/team30-taskpilot/app/: CONTEXT.md  api.py  main.py
projects/team30-taskpilot/app/core/: CONTEXT.md  config.py  llm.py
projects/team30-taskpilot/app/schedule_agent/: ADR.md  CONTEXT.md  __init__.py  graph.py  prompts.py  schemas.py
projects/team30-taskpilot/app/schedule_memory/: ADR.md  CONTEXT.md  __init__.py  chroma.py  embedding.py  vector_store.py
projects/team30-taskpilot/backend/: ADR.md  CONTEXT.md  main.py
projects/team30-taskpilot/backend/api/: __init__.py  schedules.py
projects/team30-taskpilot/backend/core/: config.py
projects/team30-taskpilot/backend/db/: models.py  session.py
projects/team30-taskpilot/data/: schedule_memory_examples.json
projects/team30-taskpilot/evals/plan/: ADR.md  CONTEXT.md  dataset.jsonl  run_eval.py
projects/team30-taskpilot/evals/pre_validate/: ADR.md  CONTEXT.md  cases.jsonl  evaluate.py
projects/team30-taskpilot/frontend/: index.html  package-lock.json  package.json
projects/team30-taskpilot/frontend/src/: App.tsx  styles.css
projects/team30-taskpilot/tests/: test_schedule_agent.py
projects/team30-taskpilot/tests/ask_context/: test_ask_context.py
projects/team30-taskpilot/tests/backend/: conftest.py  factories.py  test_schedules.py
projects/team30-taskpilot/tests/classification/: test_classification.py
projects/team30-taskpilot/tests/plan/: __init__.py  test_plan.py
projects/team30-taskpilot/tests/post_validate/: test_post_validate.py
projects/team30-taskpilot/tests/pre_validate/: test_evaluate.py  test_pre_validate.py
projects/team6-ARA/backend/: AGENTS.md  README.md  pyproject.toml
projects/team6-ARA/backend/app/: logging_config.py  main.py
projects/team6-ARA/backend/docs/: review-result.md
projects/team6-ARA/backend/tests/: conftest.py  test_analyze.py  test_conflict_rules.py  test_graph.py  test_local_tools.py  test_prefs_conn.py  test_run_endpoint.py  test_tool_selection.py
projects/team8-team8/BE/: .gitignore  AGENTS.md  Dockerfile  SKILL.md  pyproject.toml  requirements.txt
projects/team8-team8/BE/Docs/: architecture-models.md  (+3 more)
(+1049 files in other folders)
