[project]
name = "schedule-task-agent"
version = "0.1.0"
description = "LangGraph 기반 일정 서브태스크 생성 에이전트"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "chromadb>=0.5.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-upstage>=0.3.0",
    "langgraph>=0.2.0",
    "sqlmodel>=0.0.21",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "aiosqlite>=0.20.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "factory-boy>=3.3.3",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/backend"]
pythonpath = ["."]

