[project]
name = "action-router-backend"
version = "0.1.0"
description = "Action Router Agent backend (FastAPI + LangGraph)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]",
    "langgraph",
    "langchain-upstage",
    "pydantic",
]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
