[project]
name = "detective-agent-be"
version = "0.1.0"
description = "Backend API service for Detective Agent"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.35.0",
    "pydantic==2.13.4",
    "pydantic-settings==2.12.0",
    "httpx==0.28.1",
    "langgraph>=0.2.0",
    "typing-extensions>=4.11",
    "neo4j>=5.0",
    "psycopg[binary]>=3.1",
    "sqlalchemy>=2.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.1",
]

[tool.uv]
package = false
